# memoryManagment

./: CMakeLists.txt  README.md
generalAllocators/: TODO.txt  a.out  allocatorsTest.c  generalInclude.h  generalInclude.h.gch  linearAllocator.c  linearAllocator.h  linearAllocator.h.gch  poolAllocator.c  poolAllocator.h  poolAllocator.h.gch  simpleArrayBasedStack.h  simpleArrayBasedStack.h.gch  stackAllocator.c  stackAllocator.h  stackAllocator.h.gch  utils.c  utils.h
stdWrappers/: Allocator.h  AllocatorWrapper.h  testStdAllocators.cpp
